name:                postit
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/postit#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable postit
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gi-gtk == 3.0.*
                     , hashable
                     , haskell-gi-base == 0.20.*
                     , gi-glib == 2.0.*
                     , gi-gdk == 3.0.*
                     , gi-gdkpixbuf == 2.0.*
                     , gi-gio
                     , mtl
                     , reactive-banana-gi-gtk >= 0.2
                     , text
                     , transformers == 0.5.*
                     , unordered-containers
